--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -616,6 +616,14 @@ video {
   inset: 9rem;
 }
 
+.inset-\[47vh_auto_auto_15vw\]{
+  inset: 47vh auto auto 15vw;
+}
+
+.inset-\[50\%_auto_auto_20vw\]{
+  inset: 50% auto auto 20vw;
+}
+
 .inset-\[50vh_auto_auto_15vw\]{
   inset: 50vh auto auto 15vw;
 }
@@ -624,32 +632,8 @@ video {
   inset: 60px 5vw auto auto;
 }
 
-.inset-\[0_5vw_auto_auto\]{
-  inset: 0 5vw auto auto;
-}
-
-.inset-\[47vh_auto_auto_15vw\]{
-  inset: 47vh auto auto 15vw;
-}
-
-.inset-\[auto_auto_auto_auto\]{
-  inset: auto auto auto auto;
-}
-
-.inset-\[50vh_50vw_auto_auto\]{
-  inset: 50vh 50vw auto auto;
-}
-
-.inset-\[50vh_auto_auto_50vw\]{
-  inset: 50vh auto auto 50vw;
-}
-
-.inset-\[50vh_auto_auto_30vw\]{
-  inset: 50vh auto auto 30vw;
-}
-
-.inset-\[50vh_auto_auto_20vw\]{
-  inset: 50vh auto auto 20vw;
+.inset-auto{
+  inset: auto;
 }
 
 .inset-y-1{
@@ -661,6 +645,10 @@ video {
   bottom: 0px;
 }
 
+.bottom-1{
+  bottom: 0.25rem;
+}
+
 .bottom-auto{
   bottom: auto;
 }
@@ -669,8 +657,16 @@ video {
   left: 0px;
 }
 
+.left-1{
+  left: 0.25rem;
+}
+
 .left-auto{
   left: auto;
+}
+
+.right-0{
+  right: 0px;
 }
 
 .right-auto{
@@ -683,6 +679,14 @@ video {
 
 .top-1{
   top: 0.25rem;
+}
+
+.top-auto{
+  top: auto;
+}
+
+.z-0{
+  z-index: 0;
 }
 
 .z-10{
@@ -705,6 +709,11 @@ video {
   margin: 0.25rem;
 }
 
+.mx-52{
+  margin-left: 13rem;
+  margin-right: 13rem;
+}
+
 .my-10{
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
@@ -713,6 +722,19 @@ video {
 .my-5{
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
+}
+
+.my-52{
+  margin-top: 13rem;
+  margin-bottom: 13rem;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
+.mb-52{
+  margin-bottom: 13rem;
 }
 
 .mb-auto{
@@ -755,12 +777,12 @@ video {
   margin-top: 2.5rem;
 }
 
-.mt-auto{
-  margin-top: auto;
+.mt-52{
+  margin-top: 13rem;
 }
 
-.mt-\[47\%\]{
-  margin-top: 47%;
+.mt-auto{
+  margin-top: auto;
 }
 
 .block{
@@ -799,8 +821,24 @@ video {
   aspect-ratio: 1 / 1;
 }
 
+.h-0{
+  height: 0px;
+}
+
 .h-1{
   height: 0.25rem;
+}
+
+.h-2{
+  height: 0.5rem;
+}
+
+.h-96{
+  height: 24rem;
+}
+
+.h-\[24px\]{
+  height: 24px;
 }
 
 .h-\[25px\]{
@@ -836,52 +874,56 @@ video {
   height: 100vh;
 }
 
-.h-\[50vh\]{
-  height: 50vh;
+.h-1\/2{
+  height: 50%;
+}
+
+.h-2\/3{
+  height: 66.666667%;
+}
+
+.h-3\/4{
+  height: 75%;
+}
+
+.h-3{
+  height: 0.75rem;
+}
+
+.h-\[75px\]{
+  height: 75px;
 }
 
 .h-\[50px\]{
   height: 50px;
 }
 
-.h-\[24px\]{
-  height: 24px;
+.h-\[30px\]{
+  height: 30px;
 }
 
-.h-96{
-  height: 24rem;
+.h-\[40px\]{
+  height: 40px;
 }
 
-.h-1\/2{
-  height: 50%;
+.h-\[500px\]{
+  height: 500px;
 }
 
-.h-\[10vh\]{
-  height: 10vh;
+.h-\[50vh\]{
+  height: 50vh;
 }
 
-.h-\[200vh\]{
-  height: 200vh;
+.h-\[40vh\]{
+  height: 40vh;
 }
 
-.h-\[100vh\]{
-  height: 100vh;
+.h-\[25vh\]{
+  height: 25vh;
 }
 
-.h-\[300vh\]{
-  height: 300vh;
-}
-
-.h-\[400vh\]{
-  height: 400vh;
-}
-
-.max-h-\[10vh\]{
-  max-height: 10vh;
-}
-
-.max-h-\[50vh\]{
-  max-height: 50vh;
+.h-\[20vh\]{
+  height: 20vh;
 }
 
 .min-h-screen{
@@ -900,6 +942,14 @@ video {
   width: 50%;
 }
 
+.w-\[20vw\]{
+  width: 20vw;
+}
+
+.w-\[24px\]{
+  width: 24px;
+}
+
 .w-\[25px\]{
   width: 25px;
 }
@@ -910,10 +960,6 @@ video {
 
 .w-\[50px\]{
   width: 50px;
-}
-
-.w-\[60vw\]{
-  width: 60vw;
 }
 
 .w-\[70px\]{
@@ -929,53 +975,79 @@ video {
   width: 100%;
 }
 
+.w-max{
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.w-min{
+  width: -moz-min-content;
+  width: min-content;
+}
+
 .w-screen{
   width: 100vw;
 }
 
-.w-\[24px\]{
-  width: 24px;
+.w-2\/3{
+  width: 66.666667%;
 }
 
-.w-\[300px\]{
-  width: 300px;
-}
-
-.w-\[500px\]{
-  width: 500px;
-}
-
-.w-\[1\/3\]{
-  width: 1/3;
+.w-2{
+  width: 0.5rem;
 }
 
 .w-1\/3{
   width: 33.333333%;
 }
 
+.w-\[75px\]{
+  width: 75px;
+}
+
+.w-\[30px\]{
+  width: 30px;
+}
+
+.w-\[40px\]{
+  width: 40px;
+}
+
 .w-1\/4{
   width: 25%;
 }
 
-.w-\[20vw\]{
-  width: 20vw;
+.w-\[300px\]{
+  width: 300px;
 }
 
-.w-\[10vw\]{
-  width: 10vw;
+.w-\[20vh\]{
+  width: 20vh;
 }
 
-.min-w-\[20vw\]{
-  min-width: 20vw;
+.w-\[30vh\]{
+  width: 30vh;
 }
 
-.min-w-\[10vw\]{
-  min-width: 10vw;
+.w-auto{
+  width: auto;
+}
+
+.min-w-\[300px\]{
+  min-width: 300px;
 }
 
 .min-w-min{
   min-width: -moz-min-content;
   min-width: min-content;
+}
+
+.max-w-\[20vh\]{
+  max-width: 20vh;
+}
+
+.max-w-\[30vh\]{
+  max-width: 30vh;
 }
 
 .flex-1{
@@ -1000,6 +1072,11 @@ video {
 
 .border-collapse{
   border-collapse: collapse;
+}
+
+.-translate-x-1{
+  --tw-translate-x: -0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-translate-y-1{
@@ -1051,6 +1128,10 @@ video {
   place-items: center;
 }
 
+.content-center{
+  align-content: center;
+}
+
 .content-start{
   align-content: flex-start;
 }
@@ -1067,6 +1148,10 @@ video {
   align-items: stretch;
 }
 
+.justify-start{
+  justify-content: flex-start;
+}
+
 .justify-end{
   justify-content: flex-end;
 }
@@ -1079,8 +1164,36 @@ video {
   justify-content: space-between;
 }
 
+.justify-around{
+  justify-content: space-around;
+}
+
+.justify-evenly{
+  justify-content: space-evenly;
+}
+
+.justify-stretch{
+  justify-content: stretch;
+}
+
 .justify-items-center{
   justify-items: center;
+}
+
+.gap-0{
+  gap: 0px;
+}
+
+.gap-1{
+  gap: 0.25rem;
+}
+
+.gap-10{
+  gap: 2.5rem;
+}
+
+.gap-3{
+  gap: 0.75rem;
 }
 
 .gap-4{
@@ -1089,10 +1202,6 @@ video {
 
 .gap-5{
   gap: 1.25rem;
-}
-
-.gap-10{
-  gap: 2.5rem;
 }
 
 .self-start{
@@ -1143,6 +1252,14 @@ video {
   white-space: nowrap;
 }
 
+.rounded-2xl{
+  border-radius: 1rem;
+}
+
+.rounded-full{
+  border-radius: 9999px;
+}
+
 .rounded-lg{
   border-radius: 0.5rem;
 }
@@ -1167,12 +1284,12 @@ video {
   border-bottom-width: 2px;
 }
 
-.border-t-2{
-  border-top-width: 2px;
-}
-
 .border-t{
   border-top-width: 1px;
+}
+
+.border-t-2{
+  border-top-width: 2px;
 }
 
 .border-primary{
@@ -1193,6 +1310,11 @@ video {
 .bg-blue-500{
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-gray-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .bg-pink-500{
@@ -1219,31 +1341,33 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-100{
+.bg-yellow-500{
   --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.bg-opacity-50{
-  --tw-bg-opacity: 0.5;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-10{
   --tw-bg-opacity: 0.1;
 }
 
-.bg-gradient-to-tr{
-  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+.bg-opacity-50{
+  --tw-bg-opacity: 0.5;
+}
+
+.bg-opacity-25{
+  --tw-bg-opacity: 0.25;
+}
+
+.bg-gradient-to-t{
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
 .bg-gradient-to-tl{
   background-image: linear-gradient(to top left, var(--tw-gradient-stops));
 }
 
-.from-primary{
-  --tw-gradient-from: #742F85 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(116 47 133 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+.bg-gradient-to-tr{
+  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
 
 .from-accent{
@@ -1252,8 +1376,24 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-indigo-500{
+  --tw-gradient-from: #6366f1 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(99 102 241 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-primary{
+  --tw-gradient-from: #742F85 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(116 47 133 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .to-accent{
   --tw-gradient-to: #131518 var(--tw-gradient-to-position);
+}
+
+.to-indigo-500{
+  --tw-gradient-to: #6366f1 var(--tw-gradient-to-position);
 }
 
 .to-primary{
@@ -1274,6 +1414,10 @@ video {
 
 .fill-\[\#003B57\]{
   fill: #003B57;
+}
+
+.fill-\[\#0055FF\]{
+  fill: #0055FF;
 }
 
 .fill-\[\#00599C\]{
@@ -1320,6 +1464,14 @@ video {
   fill: #336791;
 }
 
+.fill-\[\#339933\]{
+  fill: #339933;
+}
+
+.fill-\[\#363636\]{
+  fill: #363636;
+}
+
 .fill-\[\#3776AB\]{
   fill: #3776AB;
 }
@@ -1330,6 +1482,10 @@ video {
 
 .fill-\[\#41CD52\]{
   fill: #41CD52;
+}
+
+.fill-\[\#4E5EE4\]{
+  fill: #4E5EE4;
 }
 
 .fill-\[\#5C3EE8\]{
@@ -1356,6 +1512,14 @@ video {
   fill: #F05032;
 }
 
+.fill-\[\#F05138\]{
+  fill: #F05138;
+}
+
+.fill-\[\#F16822\]{
+  fill: #F16822;
+}
+
 .fill-\[\#F7DF1E\]{
   fill: #F7DF1E;
 }
@@ -1364,60 +1528,70 @@ video {
   fill: #fff;
 }
 
-.fill-\[\#F05138\]{
-  fill: #F05138;
+.fill-\[\#25D366\]{
+  fill: #25D366;
 }
 
-.fill-\[\#E93A2B\]{
-  fill: #E93A2B;
+.fill-\[\#26A5E4\]{
+  fill: #26A5E4;
 }
 
-.fill-\[\#FA7343\]{
-  fill: #FA7343;
+.fill-black{
+  fill: #000;
 }
 
-.fill-\[\#363636\]{
-  fill: #363636;
+.object-contain{
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
-.fill-\[\#0055FF\]{
-  fill: #0055FF;
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
-.fill-\[\#339933\]{
-  fill: #339933;
-}
-
-.fill-\[\#1C5C99\]{
-  fill: #1C5C99;
-}
-
-.fill-\[\#4E5EE4\]{
-  fill: #4E5EE4;
-}
-
-.fill-\[\#F16822\]{
-  fill: #F16822;
+.object-fill{
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 
 .p-1{
   padding: 0.25rem;
 }
 
+.p-10{
+  padding: 2.5rem;
+}
+
 .p-2{
   padding: 0.5rem;
+}
+
+.p-20{
+  padding: 5rem;
 }
 
 .p-4{
   padding: 1rem;
 }
 
-.p-10{
-  padding: 2.5rem;
+.p-5{
+  padding: 1.25rem;
 }
 
-.p-20{
-  padding: 5rem;
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-52{
+  padding-left: 13rem;
+  padding-right: 13rem;
 }
 
 .px-\[30\%\]{
@@ -1440,33 +1614,31 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.py-36{
+  padding-top: 9rem;
+  padding-bottom: 9rem;
+}
+
 .py-5{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
 
-.px-10{
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.py-\[10vh\]{
+  padding-top: 10vh;
+  padding-bottom: 10vh;
 }
 
-.px-\[10vw\]{
-  padding-left: 10vw;
-  padding-right: 10vw;
+.pb-10{
+  padding-bottom: 2.5rem;
 }
 
-.px-\[20vw\]{
-  padding-left: 20vw;
-  padding-right: 20vw;
+.pb-\[10vh\]{
+  padding-bottom: 10vh;
 }
 
-.px-\[15vw\]{
-  padding-left: 15vw;
-  padding-right: 15vw;
-}
-
-.pt-5{
-  padding-top: 1.25rem;
+.pb-\[5vh\]{
+  padding-bottom: 5vh;
 }
 
 .pt-10{
@@ -1481,17 +1653,55 @@ video {
   padding-top: 8rem;
 }
 
-.pt-\[10vh\]{
-  padding-top: 10vh;
+.pt-5{
+  padding-top: 1.25rem;
+}
+
+.pt-\[20vh\]{
+  padding-top: 20vh;
+}
+
+.pb-5{
+  padding-bottom: 1.25rem;
+}
+
+.pr-1{
+  padding-right: 0.25rem;
+}
+
+.pr-2{
+  padding-right: 0.5rem;
+}
+
+.pr-5{
+  padding-right: 1.25rem;
 }
 
 .text-center{
   text-align: center;
 }
 
+.align-baseline{
+  vertical-align: baseline;
+}
+
+.align-middle{
+  vertical-align: middle;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-5xl{
@@ -1504,8 +1714,18 @@ video {
   line-height: 1;
 }
 
+.text-7xl{
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
 .text-8xl{
   font-size: 6rem;
+  line-height: 1;
+}
+
+.text-9xl{
+  font-size: 8rem;
   line-height: 1;
 }
 
@@ -1514,29 +1734,24 @@ video {
   line-height: 1.5rem;
 }
 
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
-.text-9xl{
-  font-size: 8rem;
-  line-height: 1;
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
-.text-7xl{
-  font-size: 4.5rem;
-  line-height: 1;
-}
-
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold{
@@ -1549,6 +1764,31 @@ video {
 
 .leading-normal{
   line-height: 1.5;
+}
+
+.text-accent{
+  --tw-text-opacity: 1;
+  color: rgb(19 21 24 / var(--tw-text-opacity));
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-gray-300{
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-primary{
@@ -1566,19 +1806,34 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-accent{
+.text-\[\#26A5E4\]{
   --tw-text-opacity: 1;
-  color: rgb(19 21 24 / var(--tw-text-opacity));
+  color: rgb(38 165 228 / var(--tw-text-opacity));
 }
 
-.text-gray-500{
+.text-\[\#25D366\]{
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: rgb(37 211 102 / var(--tw-text-opacity));
 }
 
-.text-black{
+.text-green-500{
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+
+.text-green-900{
+  --tw-text-opacity: 1;
+  color: rgb(20 83 45 / var(--tw-text-opacity));
+}
+
+.text-blue-500{
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.text-yellow-500{
+  --tw-text-opacity: 1;
+  color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -1626,8 +1881,21 @@ video {
   outline-color: #fff;
 }
 
+.outline-red-200{
+  outline-color: #fecaca;
+}
+
+.outline-primary{
+  outline-color: #742F85;
+}
+
 .blur{
   --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.blur-lg{
+  --tw-blur: blur(16px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -1683,6 +1951,9 @@ body {
       rgba(0, 0, 0, 0) 100%
     )
     no-repeat;
+  position: relative;
+  /* padding for footer */
+  padding-bottom: 30vh;
 }
 
 /* make scrollbar invisible */
@@ -1716,4 +1987,10 @@ body {
 
 .first\:border-t:first-child{
   border-top-width: 1px;
+}
+
+@media (min-width: 768px){
+  .md\:block{
+    display: block;
+  }
 }
