--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -789,6 +789,10 @@ video {
   margin-top: auto;
 }
 
+.mb-\[10vh\]{
+  margin-bottom: 10vh;
+}
+
 .block{
   display: block;
 }
@@ -881,6 +885,10 @@ video {
   height: 70px;
 }
 
+.h-\[calc\(18\.75vw_-2\.5rem\)\]{
+  height: calc(18.75vw - 2.5rem);
+}
+
 .h-fit{
   height: -moz-fit-content;
   height: fit-content;
@@ -890,49 +898,13 @@ video {
   height: 100%;
 }
 
-.h-screen{
-  height: 100vh;
-}
-
-.h-\[50\%\]{
-  height: 50%;
-}
-
 .h-min{
   height: -moz-min-content;
   height: min-content;
 }
 
-.h-\[100px\]{
-  height: 100px;
-}
-
-.h-\[37vh\]{
-  height: 37vh;
-}
-
-.h-\[37\.5vh\]{
-  height: 37.5vh;
-}
-
-.h-\[37\.5vw\]{
-  height: 37.5vw;
-}
-
-.h-\[calc\(37\.5vh_-2\.5rem\)\]{
-  height: calc(37.5vh - 2.5rem);
-}
-
-.h-\[calc\(37\.5vh_-5rem\)\]{
-  height: calc(37.5vh - 5rem);
-}
-
-.h-\[calc\(37\.5vw_-5rem\)\]{
-  height: calc(37.5vw - 5rem);
-}
-
-.h-\[calc\(18\.75vw_-2\.5rem\)\]{
-  height: calc(18.75vw - 2.5rem);
+.h-screen{
+  height: 100vh;
 }
 
 .min-h-screen{
@@ -959,8 +931,12 @@ video {
   width: 0.5rem;
 }
 
-.w-3\/4{
-  width: 75%;
+.w-2\/3{
+  width: 66.666667%;
+}
+
+.w-3{
+  width: 0.75rem;
 }
 
 .w-\[20vw\]{
@@ -1014,44 +990,12 @@ video {
   width: 100vw;
 }
 
-.w-3{
-  width: 0.75rem;
-}
-
-.w-\[300px\]{
-  width: 300px;
-}
-
-.w-1\/5{
-  width: 20%;
-}
-
-.w-\[200px\]{
-  width: 200px;
-}
-
-.w-2\/4{
-  width: 50%;
+.w-12{
+  width: 3rem;
 }
 
 .w-1\/3{
   width: 33.333333%;
-}
-
-.w-2\/3{
-  width: 66.666667%;
-}
-
-.w-\[undefined\]{
-  width: undefined;
-}
-
-.w-\[0\]{
-  width: 0;
-}
-
-.w-\[1\]{
-  width: 1;
 }
 
 .min-w-\[300px\]{
@@ -1065,6 +1009,10 @@ video {
 
 .flex-1{
   flex: 1 1 0%;
+}
+
+.flex-\[4\]{
+  flex: 4;
 }
 
 .flex-shrink{
@@ -1115,6 +1063,10 @@ video {
 
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .resize{
@@ -1217,6 +1169,10 @@ video {
   gap: 1.25rem;
 }
 
+.gap-32{
+  gap: 8rem;
+}
+
 .self-start{
   align-self: flex-start;
 }
@@ -1289,6 +1245,10 @@ video {
   border-width: 2px;
 }
 
+.border-0{
+  border-width: 0px;
+}
+
 .border-b{
   border-bottom-width: 1px;
 }
@@ -1305,9 +1265,9 @@ video {
   border-top-width: 2px;
 }
 
-.border-primary{
+.border-neutral-200{
   --tw-border-opacity: 1;
-  border-color: rgb(116 47 133 / var(--tw-border-opacity));
+  border-color: rgb(229 229 229 / var(--tw-border-opacity));
 }
 
 .border-neutral-500{
@@ -1315,9 +1275,9 @@ video {
   border-color: rgb(115 115 115 / var(--tw-border-opacity));
 }
 
-.border-neutral-200{
+.border-primary{
   --tw-border-opacity: 1;
-  border-color: rgb(229 229 229 / var(--tw-border-opacity));
+  border-color: rgb(116 47 133 / var(--tw-border-opacity));
 }
 
 .bg-accent{
@@ -1338,6 +1298,31 @@ video {
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-gray-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+.bg-gray-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
+.bg-gray-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+.bg-gray-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
+.bg-gray-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
 .bg-pink-500{
@@ -1369,40 +1354,6 @@ video {
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
-.bg-\[uri\(\$\{profileImage\}\)\]{
-  background-color: uri(${profileImage});
-}
-
-.bg-gray-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-
-.bg-gray-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#d9d9d9\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(217 217 217 / var(--tw-bg-opacity));
-}
-
-.bg-gray-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-
-.bg-gray-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}
-
-.bg-gray-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-10{
   --tw-bg-opacity: 0.1;
 }
@@ -1419,6 +1370,14 @@ video {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
+.bg-gradient-to-br{
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-r{
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
 .bg-gradient-to-t{
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
@@ -1431,28 +1390,10 @@ video {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
 
-.bg-\[url\(\$\{profileImage\}\)\]{
-  background-image: url(${profileImage});
-}
-
-.bg-\[url\(\'\$\{profileImage\}\'\)\]{
-  background-image: url('${profileImage}');
-}
-
-.bg-\[url\(\'\$\{profileImage\.toString\(\)\}\'\)\]{
-  background-image: url('${profileImage.toString()}');
-}
-
-.bg-\[url\(\'\.\.\/\.\.\/assets\/IMG_2673\.jpeg\'\)\]{
-  background-image: url('../../assets/IMG_2673.jpeg');
-}
-
-.bg-gradient-to-r{
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-br{
-  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+.from-\[\#0f5c6d7a\]{
+  --tw-gradient-from: #0f5c6d7a var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(15 92 109 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .from-accent{
@@ -1497,27 +1438,13 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-\[\#01a4c7\]{
-  --tw-gradient-from: #01a4c7 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(1 164 199 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#0f5c6d\]{
-  --tw-gradient-from: #0f5c6d var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(15 92 109 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#0f5c6d7a\]{
-  --tw-gradient-from: #0f5c6d7a var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(15 92 109 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .via-black{
   --tw-gradient-to: rgb(0 0 0 / 0)  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), #000 var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.to-\[\#ad4d4276\]{
+  --tw-gradient-to: #ad4d4276 var(--tw-gradient-to-position);
 }
 
 .to-accent{
@@ -1546,26 +1473,6 @@ video {
 
 .to-white{
   --tw-gradient-to: #fff var(--tw-gradient-to-position);
-}
-
-.to-\[\#e05702\]{
-  --tw-gradient-to: #e05702 var(--tw-gradient-to-position);
-}
-
-.to-\[\#884b26\]{
-  --tw-gradient-to: #884b26 var(--tw-gradient-to-position);
-}
-
-.to-\[\#\#DD7064\]{
-  --tw-gradient-to: ##DD7064 var(--tw-gradient-to-position);
-}
-
-.to-\[\#DD7064\]{
-  --tw-gradient-to: #DD7064 var(--tw-gradient-to-position);
-}
-
-.to-\[\#ad4d4276\]{
-  --tw-gradient-to: #ad4d4276 var(--tw-gradient-to-position);
 }
 
 .bg-contain{
@@ -1869,6 +1776,14 @@ video {
   padding-top: 20vh;
 }
 
+.pl-10{
+  padding-left: 2.5rem;
+}
+
+.pr-10{
+  padding-right: 2.5rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -1946,34 +1861,6 @@ video {
   line-height: 1rem;
 }
 
-.text-\[400px\]{
-  font-size: 400px;
-}
-
-.text-\[100vh\]{
-  font-size: 100vh;
-}
-
-.text-\[35vh\]{
-  font-size: 35vh;
-}
-
-.text-\[38vh\]{
-  font-size: 38vh;
-}
-
-.text-\[40vh\]{
-  font-size: 40vh;
-}
-
-.text-\[50vh\]{
-  font-size: 50vh;
-}
-
-.text-\[45vh\]{
-  font-size: 45vh;
-}
-
 .font-bold{
   font-weight: 700;
 }
@@ -2041,6 +1928,11 @@ video {
   color: rgb(116 47 133 / var(--tw-text-opacity));
 }
 
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
 .text-secondary{
   --tw-text-opacity: 1;
   color: rgb(188 80 214 / var(--tw-text-opacity));
@@ -2056,11 +1948,6 @@ video {
   color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
-.text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
 .underline{
   text-decoration-line: underline;
 }
@@ -2073,20 +1960,26 @@ video {
   opacity: 0.1;
 }
 
-.opacity-50{
-  opacity: 0.5;
+.opacity-20{
+  opacity: 0.2;
 }
 
 .opacity-5{
   opacity: 0.05;
 }
 
-.opacity-20{
-  opacity: 0.2;
+.opacity-50{
+  opacity: 0.5;
 }
 
 .bg-blend-saturation{
   background-blend-mode: saturation;
+}
+
+.shadow-2xl{
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-inner{
@@ -2101,19 +1994,13 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-2xl{
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.shadow-black{
+  --tw-shadow-color: #000;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .shadow-primary{
   --tw-shadow-color: #742F85;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-black{
-  --tw-shadow-color: #000;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -2147,18 +2034,24 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.drop-shadow-2xl{
-  --tw-drop-shadow: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 .drop-shadow{
   --tw-drop-shadow: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.drop-shadow-2xl{
+  --tw-drop-shadow: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.backdrop-blur-3xl{
+  --tw-backdrop-blur: blur(64px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .backdrop-blur-\[2px\]{
@@ -2175,12 +2068,6 @@ video {
 
 .backdrop-blur-xl{
   --tw-backdrop-blur: blur(24px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-.backdrop-blur-3xl{
-  --tw-backdrop-blur: blur(64px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
@@ -2251,6 +2138,11 @@ body {
 
 .first\:border-t:first-child{
   border-top-width: 1px;
+}
+
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 @media (min-width: 768px){
