--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -697,6 +697,42 @@ video {
   top: auto;
 }
 
+.bottom-\[10vh\]{
+  bottom: 10vh;
+}
+
+.right-1\/2{
+  right: 50%;
+}
+
+.right-1{
+  right: 0.25rem;
+}
+
+.bottom-\[20vh\]{
+  bottom: 20vh;
+}
+
+.bottom-\[10\%\]{
+  bottom: 10%;
+}
+
+.left-\[10\%\]{
+  left: 10%;
+}
+
+.bottom-\[20\%\]{
+  bottom: 20%;
+}
+
+.bottom-\[21\%\]{
+  bottom: 21%;
+}
+
+.left-\[13\%\]{
+  left: 13%;
+}
+
 .z-0{
   z-index: 0;
 }
@@ -931,12 +967,28 @@ video {
   height: 100vh;
 }
 
+.h-\[10px\]{
+  height: 10px;
+}
+
+.h-\[100px\]{
+  height: 100px;
+}
+
+.h-\[300px\]{
+  height: 300px;
+}
+
 .max-h-0{
   max-height: 0px;
 }
 
 .max-h-screen{
   max-height: 100vh;
+}
+
+.max-h-full{
+  max-height: 100%;
 }
 
 .min-h-0{
@@ -1046,6 +1098,18 @@ video {
   width: 100vw;
 }
 
+.w-\[100px\]{
+  width: 100px;
+}
+
+.w-\[10px\]{
+  width: 10px;
+}
+
+.w-3\/4{
+  width: 75%;
+}
+
 .min-w-0{
   min-width: 0px;
 }
@@ -1057,6 +1121,10 @@ video {
 .min-w-min{
   min-width: -moz-min-content;
   min-width: min-content;
+}
+
+.max-w-full{
+  max-width: 100%;
 }
 
 .flex-1{
@@ -1114,6 +1182,26 @@ video {
 
 .translate-y-1{
   --tw-translate-y: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-\[100px\]{
+  --tw-translate-x: -100px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-\[1000px\]{
+  --tw-translate-x: -1000px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-10{
+  --tw-translate-x: 2.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-\[500px\]{
+  --tw-translate-x: -500px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1317,6 +1405,10 @@ video {
 
 .rounded-xl{
   border-radius: 0.75rem;
+}
+
+.rounded-3xl{
+  border-radius: 1.5rem;
 }
 
 .rounded-l-2xl{
